**Modified color and font size of the view

--- a/src/app/feature-modules/user/home-con/home-page/home-page.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/home-page.component.html
@@ -170,18 +170,22 @@
         <div class="row recom-con">
           <div class="col-12 p-0">
             <div class="r-h-c">
-              <div class="badge badge-secondary f-l m-r-5"><i class="fa fa-bookmark"></i></div>
-              <p> Recomendation</p>
+              <!--<div class="badge badge-secondary f-l m-r-5"><i class="fa fa-bookmark"></i></div>-->
+              <p> Recommendation</p>
             </div>
-            <hr class="hr-r">
+            <!--<hr class="hr-r">-->
           </div>
           <div class="r-com-con">
             <div class="recom">
               <div class="">
-                <div class="pic-c bcimg" style="background-image: url('./assets/images/traffic.jpg')">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/background2.jpg')">
 
                   <div class="r-o-c">
-                    <div class="btn btn-block btn-success">Follow</div>
+                    <div class="t-t-c">
+                      <p>some stuff about planes</p>
+                      <p class="sm"><i class="fa fa-share-square"></i> funky</p>
+                    </div>
+                    <div class="btn btn-block btn-success b1">follow</div>
                     <div class="r-o-t-c">
                       <p>Wild West</p>
                       <p class="sm">Robin Dark</p>
@@ -191,23 +195,6 @@
 
                   </div>
 
-                </div>
-
-              </div>
-            </div>
-            <div class="recom">
-              <div class="">
-                <div class="pic-c bcimg" style="background-image: url('./assets/images/transaction.jpg')">
-                  <div class="r-o-c">
-                    <div class="btn btn-block btn-warning">Follow</div>
-                    <div class="r-o-t-c">
-                      <p>Wild West</p>
-                      <p class="sm">Robin Dark</p>
-                    </div>
-                  </div>
-                  <div class="r-o-c-b">
-
-                  </div>
                 </div>
 
               </div>
@@ -215,8 +202,13 @@
             <div class="recom">
               <div class="">
                 <div class="pic-c bcimg" style="background-image: url('./assets/images/background.jpg')">
+
                   <div class="r-o-c">
-                    <div class="btn  btn-block btn-success">Follow</div>
+                    <div class="t-t-c">
+                      <p>some stuff about planes</p>
+                      <p class="sm"><i class="fa fa-share-square"></i> funky</p>
+                    </div>
+                    <div class="btn btn-block btn-success b2">follow</div>
                     <div class="r-o-t-c">
                       <p>Wild West</p>
                       <p class="sm">Robin Dark</p>
@@ -225,7 +217,101 @@
                   <div class="r-o-c-b">
 
                   </div>
+
                 </div>
+
+              </div>
+            </div>
+            <div class="recom">
+              <div class="">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/background2.jpg')">
+
+                  <div class="r-o-c">
+                    <div class="t-t-c">
+                      <p>some stuff about planes</p>
+                      <p class="sm"><i class="fa fa-share-square"></i> funky</p>
+                    </div>
+                    <div class="btn btn-block btn-success b1">follow</div>
+                    <div class="r-o-t-c">
+                      <p>Wild West</p>
+                      <p class="sm">Robin Dark</p>
+                    </div>
+                  </div>
+                  <div class="r-o-c-b">
+
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+            <div class="recom">
+              <div class="">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/background.jpg')">
+
+                  <div class="r-o-c">
+                    <div class="t-t-c">
+                      <p>some stuff about planes</p>
+                      <p class="sm"><i class="fa fa-share-square"></i> funky</p>
+                    </div>
+                    <div class="btn btn-block btn-success b2">follow</div>
+                    <div class="r-o-t-c">
+                      <p>Wild West</p>
+                      <p class="sm">Robin Dark</p>
+                    </div>
+                  </div>
+                  <div class="r-o-c-b">
+
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+            <div class="recom">
+              <div class="">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/background2.jpg')">
+
+                  <div class="r-o-c">
+                    <div class="t-t-c">
+                      <p>some stuff about planes</p>
+                      <p class="sm"><i class="fa fa-share-square"></i> funky</p>
+                    </div>
+                    <div class="btn btn-block btn-success b1">follow</div>
+                    <div class="r-o-t-c">
+                      <p>Wild West</p>
+                      <p class="sm">Robin Dark</p>
+                    </div>
+                  </div>
+                  <div class="r-o-c-b">
+
+                  </div>
+
+                </div>
+
+              </div>
+            </div>
+            <div class="recom">
+              <div class="">
+                <div class="pic-c bcimg" style="background-image: url('./assets/images/background.jpg')">
+
+                  <div class="r-o-c">
+                    <div class="t-t-c">
+                      <p>some stuff about planes</p>
+                      <p class="sm"><i class="fa fa-share-square"></i> funky</p>
+                    </div>
+                    <div class="btn btn-block btn-success b2">follow</div>
+                    <div class="r-o-t-c">
+                      <p>Wild West</p>
+                      <p class="sm">Robin Dark</p>
+                    </div>
+                  </div>
+                  <div class="r-o-c-b">
+
+                  </div>
+
+                </div>
+
               </div>
             </div>
 
@@ -237,16 +323,16 @@
       <div class="container news-con">
         <div class="row recom-con">
           <div class="col-12 p-0">
-            <div class="r-h-c">
-              <div class="badge badge-secondary f-l m-r-5"><i class="fa fa-newspaper-o"></i></div>
+            <div class="n-h-c">
+              <!--<div class="badge badge-secondary f-l m-r-5"><i class="fa fa-newspaper-o"></i></div>-->
               <p> News</p>
             </div>
-            <hr class="hr-r">
+            <!--<hr class="hr-r">-->
 
           </div>
 
         </div>
-        <div class="news-content col-10">
+        <div class="news-content col-8">
           <div class="news-con-in">
             <small>May 1</small>
             <p class="head">Bernald Nolan</p>
@@ -256,7 +342,18 @@
 
           </div>
         </div>
-        <div class="news-content col-10">
+        <div class="row recom-con">
+          <div class="col-12 p-0">
+            <div class="n-h-c">
+              <!--<div class="badge badge-secondary f-l m-r-5"><i class="fa fa-newspaper-o"></i></div>-->
+              <p> News</p>
+            </div>
+            <!--<hr class="hr-r">-->
+
+          </div>
+
+        </div>
+        <div class="news-content col-8">
           <div class="news-con-in">
             <small>May 1</small>
             <p class="head">Bernald Nolan</p>
@@ -267,7 +364,6 @@
           </div>
         </div>
       </div>
-
     </div>
     <div class="loading row">
       <div class="col">
