--- a/src/app/feature-modules/user/home-con/saves/saves.component.html
+++ b/src/app/feature-modules/user/home-con/saves/saves.component.html
@@ -1,208 +1,264 @@
-<div class="search-con">
-  <form class="">
-    <div class="form-group">
-      <input class="s-in form-control form-control-sm" placeholder="Look around your saves">
-    </div>
-  </form>
-</div>
+<div class="saves-con">
+  <div class="search-con">
+    <form class="">
+      <div class="form-group">
+        <input class="s-in form-control form-control-sm" placeholder="Look around your saves">
+      </div>
+    </form>
+  </div>
 
-<div class="s-m-con">
-  <div class="container">
-    <div class="row sm-menu">
-      <div class="col"></div>
-      <div class="col active"><p>Saves</p></div>
-      <div class="col"><p>Following</p></div>
-      <div class="col"></div>
+  <div class="s-m-con">
+    <div class="container">
+      <div class="row sm-menu">
+        <div class="col"></div>
+        <div class="col active"><p>Saves</p></div>
+        <div class="col"><p>Following</p></div>
+        <div class="col"></div>
+      </div>
+    </div>
+    <div class="h-div">
+
     </div>
   </div>
-  <div class="h-div">
-
+  <div class="tag-con">
+    <span class="badge  badge-default ">private</span>
+    <span class="badge  badge-primary">e-course</span>
+    <span class="badge  badge-warning">news</span>
+    <span class="badge  badge-danger">tech</span>
+    <span class="badge  badge-success">Success</span>
+    <span class="badge  badge-danger">Danger</span>
+    <span class="badge  badge-warning">Warning</span>
   </div>
-</div>
-<div class="tag-con">
-  <span class="badge  badge-default">Default</span>
-  <span class="badge  badge-primary">Primary</span>
-  <span class="badge  badge-secondary">Secondary</span>
-  <span class="badge  badge-info">Info</span>
-  <span class="badge  badge-success">Success</span>
-  <span class="badge  badge-danger">Danger</span>
-  <span class="badge  badge-warning">Warning</span>
-</div>
 
-<div class="p-status-con">
-  <div class="container">
-    <div class="row p-s-c-i">
-      <div class="col">
-
-      </div>
-      <div class="col lb">
-        <p>123</p>
-        <small>FOLLOWERS</small>
-      </div>
-      <div class="col lb">
-        <p>23</p>
-        <small>FOLLOWING</small>
-      </div>
-      <div class="col">
-        <p>234</p>
-        <small>LIKES</small>
-      </div>
-      <div class="col">
-
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="">
-  <div class="t-l">
-
-    <div class="post post-t-2">
-      <div class="p-con-c">
-        <div class="container ">
-          <div class="row">
-            <div class="col-12 p-l-8">
-              <div class="u-p-p bcimg f-l" style="background-image: url('./assets/images/download.jpg')">
-
-              </div>
-              <div class="n-con">
-                <p>Selam Abate</p>
-                <p class="u-n">@selam23</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="c-c">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. </p>
-        <!--<div class="p-c bcimg" style="background-image: url('./assets/images/background4.jpg');height: 600px">-->
-
-        <!--</div>-->
-      </div>
-      <div class="p-con-c">
-        <div class="container ">
-          <div class="row">
-            <div class="col-6 s-con">
-
-              <i class="fa fa-share-alt"></i>
-            </div>
-
-            <div class="col-6">
-              <div class="ic-c">
-                <div class="a-con more">
-
-                  <i class="fa fa-ellipsis-v"></i>
-                </div>
-                <div class="a-con">
-                  <div class="value">34</div>
-                  <i class="fa fa-heart liked"></i>
-                </div>
-                <div class="a-con">
-                  <div class="value">123</div>
-                  <i class="fa fa-comment"></i>
-                </div>
-
-
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="post">
-      <div class="container news-con">
-
-        <div class="news-content col-10">
-          <div class="news-con-in">
-            <small>May 1</small>
-            <p class="head">Bernald Nolan</p>
-            <p class="desc">The content of the news snippet will be seen here. </p>
-          </div>
-          <div class="n-i-con bcimg" style="background-image: url('./assets/images/background3.jpg')">
-
-          </div>
-        </div>
-        <div class="news-content col-10">
-          <div class="news-con-in">
-            <small>May 1</small>
-            <p class="head">Bernald Nolan</p>
-            <p class="desc">The content of the news snippet will be seen here. </p>
-          </div>
-          <div class="n-i-con bcimg" style="background-image: url('./assets/images/background.jpg')">
-
-          </div>
-        </div>
-      </div>
-
-    </div>
-    <div class="post post-t-2">
-      <div class="p-con-c">
-        <div class="container ">
-          <div class="row">
-            <div class="col-12 p-l-8">
-              <div class="u-p-p bcimg f-l" style="background-image: url('./assets/images/download.jpg')">
-
-              </div>
-              <div class="n-con">
-                <p>Selam Abate</p>
-                <p class="u-n">@selam23</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="c-c">
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-          industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-          scrambled it to make a type specimen book. </p>
-        <div class="p-c bcimg" style="background-image: url('./assets/images/background.jpg');height: 600px">
+  <div class="p-status-con">
+    <div class="container">
+      <div class="row p-s-c-i">
+        <div class="col">
 
         </div>
-      </div>
-      <div class="p-con-c">
-        <div class="container ">
-          <div class="row">
-            <div class="col-6 s-con">
-
-              <i class="fa fa-share-alt"></i>
-            </div>
-
-            <div class="col-6">
-              <div class="ic-c">
-                <div class="a-con more">
-
-                  <i class="fa fa-ellipsis-v"></i>
-                </div>
-                <div class="a-con">
-                  <div class="value">34</div>
-                  <i class="fa fa-heart liked"></i>
-                </div>
-                <div class="a-con">
-                  <div class="value">123</div>
-                  <i class="fa fa-comment"></i>
-                </div>
-
-
-              </div>
-            </div>
-          </div>
+        <div class="col lb">
+          <p>123</p>
+          <small>FOLLOWERS</small>
         </div>
-      </div>
-    </div>
-    <div class="loading row">
-      <div class="col">
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        <div class="col lb">
+          <p>23</p>
+          <small>FOLLOWING</small>
+        </div>
+        <div class="col">
+          <p>234</p>
+          <small>LIKES</small>
+        </div>
+        <div class="col">
+
+        </div>
       </div>
     </div>
   </div>
+
+  <div class="">
+    <div class="t-l">
+
+      <div class="post post-t-2 dark">
+        <div class="p-con-c">
+          <div class="container ">
+            <div class="row">
+              <div class="col-8 p-l-8">
+                <div class="u-p-p bcimg f-l" style="background-image: url('./assets/images/download.jpg')">
+
+                </div>
+                <div class="n-con">
+                  <p>Selam Abate</p>
+                  <p class="p-da">1 hour ago</p>
+                </div>
+              </div>
+              <div class="col-4 t-a-r">
+                <i class="fa fa-angle-down"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="c-c">
+          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
+            scrambled it to make a type specimen book. </p>
+          <!--<div class="p-c bcimg" style="background-image: url('./assets/images/background4.jpg');height: 600px">-->
+
+          <!--</div>-->
+        </div>
+        <div class="p-con-c">
+          <div class="container ">
+            <div class="row">
+              <div class="col-6 s-con">
+
+                <i class="fa fa-share-alt"></i>
+              </div>
+
+              <div class="col-6">
+                <div class="ic-c">
+                  <div class="a-con more">
+
+                    <i class="fa fa-ellipsis-v"></i>
+                  </div>
+                  <div class="a-con">
+                    <div class="value">34</div>
+                    <i class="fa fa-heart liked"></i>
+                  </div>
+                  <div class="a-con">
+                    <div class="value">123</div>
+                    <i class="fa fa-comment"></i>
+                  </div>
+
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="post-o-c f-o-p f-o-p-r">
+        <div class="p-b-i bcimg" style="background-image: url('./assets/images/background2.jpg')">
+        </div>
+        <div class="post post-t-2 w-bck">
+
+          <div>
+            <div class="p-con-c">
+              <div class="container ">
+                <div class="row">
+                  <div class="col-8 p-l-8">
+                    <div class="u-p-p bcimg f-l" style="background-image: url('./assets/images/download.jpg')">
+                    </div>
+                    <div class="n-con">
+                      <p>Selam Abate</p>
+                      <p class="p-da">nov 8</p>
+                    </div>
+                  </div>
+                  <div class="col-4 t-a-r">
+                    <i class="fa fa-angle-down"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="c-c">
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's. </p>
+              <!--<div class="p-c bcimg" style="background-image: url('./assets/images/background4.jpg');height: 600px">-->
+
+              <!--</div>-->
+            </div>
+            <div class="p-con-c">
+              <div class="container ">
+                <div class="row">
+                  <div class="col-3 s-con">
+
+                    <i class="fa fa-share-alt"></i>
+                  </div>
+
+                  <div class="col-9">
+                    <div class="ic-c">
+                      <!--<div class="a-con more">-->
+
+                      <!--<i class="fa fa-ellipsis-v"></i>-->
+                      <!--</div>-->
+                      <div class="a-con">
+                        <div class="value">34</div>
+                        <i class="fa fa-heart liked"></i>
+                      </div>
+                      <div class="a-con">
+                        <div class="value">123</div>
+                        <i class="fa fa-comment"></i>
+                      </div>
+
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="post-o-c f-o-p f-o-p-l">
+        <div class="p-b-i bcimg" style="background-image: url('./assets/images/background2.jpg')">
+        </div>
+        <div class="post post-t-2 w-bck">
+
+          <div>
+            <div class="p-con-c">
+              <div class="container ">
+                <div class="row">
+                  <div class="col-8 p-l-8">
+                    <div class="u-p-p bcimg f-l" style="background-image: url('./assets/images/download.jpg')">
+                    </div>
+                    <div class="n-con">
+                      <p>Selam Abate</p>
+                      <p class="p-da">nov 8</p>
+                    </div>
+                  </div>
+                  <div class="col-4 t-a-r">
+                    <i class="fa fa-angle-down"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="c-c">
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                industry's. </p>
+              <!--<div class="p-c bcimg" style="background-image: url('./assets/images/background4.jpg');height: 600px">-->
+
+              <!--</div>-->
+            </div>
+            <div class="p-con-c">
+              <div class="container ">
+                <div class="row">
+                  <div class="col-3 s-con">
+
+                    <i class="fa fa-share-alt"></i>
+                  </div>
+
+                  <div class="col-9">
+                    <div class="ic-c">
+                      <!--<div class="a-con more">-->
+
+                      <!--<i class="fa fa-ellipsis-v"></i>-->
+                      <!--</div>-->
+                      <div class="a-con">
+                        <div class="value">34</div>
+                        <i class="fa fa-heart liked"></i>
+                      </div>
+                      <div class="a-con">
+                        <div class="value">123</div>
+                        <i class="fa fa-comment"></i>
+                      </div>
+
+
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="loading row">
+        <div class="col">
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
 
