--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -34,3 +34,20 @@
 }
 
 
+
+.b1{
+  background-color: #3acce1;
+  border-color: #3acce1;
+  border-radius: 12px;
+  padding: 2px;
+  font-size: 19px;
+  font-weight: normal;
+}
+.b2{
+  background-color: #ff4f9a;
+  border-color: #ff4f9a;
+  border-radius: 12px;
+  padding: 2px;
+  font-size: 19px;
+  font-weight: normal;
+}
