--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -112,7 +112,9 @@ body {
 }
 
 
-::-webkit-scrollbar {
-  display: none;  /* Safari and Chrome */
-}
+//::-webkit-scrollbar {
+//  display: none;  /* Safari and Chrome */
+//}
+
+
 
