--- a/src/app/feature-modules/register/register.component.html
+++ b/src/app/feature-modules/register/register.component.html
@@ -49,17 +49,17 @@
             <div class="row r-f-c">
               <div class="col-12">
                 <br>
-                <p class="t-a-c">Sign up with credentials</p>
+                <!--<p class="t-a-c">Sign up with credentials</p>-->
               </div>
 
               <div class="col-12">
                 <div class="form-group">
                   <div class="input-group input-group-alternative mb-4">
                     <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="fa fa-phone"></i></span>
+                      <span class="input-group-text"><i class="fa fa-user"></i></span>
                     </div>
                     <input class="form-control form-control-alternative"
-                           placeholder="email address"
+                           placeholder="user name"
                            type="text" formControlName="login">
                     <div *ngIf="submitted || (f.login.invalid && (f.login.dirty || f.login.touched))">
                       <div *ngIf="registerForm.hasError('required',['login'])">
@@ -134,17 +134,17 @@
                 </div>
               </div>
 
-              <div class="col-12">
-                <div class="custom-control custom-control-alternative custom-checkbox">
-                  <input
-                    class="custom-control-input" id=" customCheckLogin" type="checkbox">
-                  <label
-                    class="custom-control-label" for=" customCheckLogin"><span
-                    class="text-muted" (click)="changeStatus()">Remember me </span></label>
-                </div>
-                <br>
-                <br>
-              </div>
+              <!--<div class="col-12">-->
+                <!--<div class="custom-control custom-control-alternative custom-checkbox">-->
+                  <!--<input-->
+                    <!--class="custom-control-input" id=" customCheckLogin" type="checkbox">-->
+                  <!--<label-->
+                    <!--class="custom-control-label" for=" customCheckLogin"><span-->
+                    <!--class="text-muted" (click)="changeStatus()">Remember me </span></label>-->
+                <!--</div>-->
+                <!--<br>-->
+                <!--<br>-->
+              <!--</div>-->
 
               <div class="col-12 t-a-c">
                 <div class="btn btn-primary r-btn" (click)="register()">
