--- a/src/app/feature-modules/user/home-con/home-page/post/post.component.html
+++ b/src/app/feature-modules/user/home-con/home-page/post/post.component.html
@@ -10,11 +10,12 @@
     <div class="container ">
       <div class=" row">
         <div class="col-6 p-l-8">
-          <div class="u-p-p bcimg f-l" style="background-image: url('./assets/images/profile.jpg')">
+          <div class="u-p-p bcimg f-l"
+               [ngStyle]="{'background-image':'url( data:image/jpeg;base64,' + profile[0]?.curentProfilePic + ')'}">
 
           </div>
           <div class="n-con">
-            <p>Selam Abate</p>
+            <p>{{profile[0]?.userLogin}}</p>
             <p class="u-n">@selam23</p>
           </div>
         </div>
@@ -27,7 +28,7 @@
             </div>
             <div class="a-con">
               <div class="value">{{post?.likes?.length || 0}}</div>
-              <i class="fa fa-heart liked"></i>
+              <i class="fa fa-heart" [ngClass]="{'liked': isLiked}"></i>
             </div>
             <div class="a-con">
               <div class="value">{{post?.comments?.length || 0}}</div>
@@ -43,8 +44,7 @@
         <div class="com-con">
           <div class="comen" *ngFor="let c of post?.comments; let i = index;">
             <div class="com-p-c-c">
-              <div class="com-p-c bcimg" style="background-image: url('./assets/images/profile3.jpg')">
-
+              <div class="com-p-c bcimg">
               </div>
             </div>
 
